Fixed button wrapping and title font size

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ body {
 /* header */
 
 #title {
-    font-size: clamp(30px, 18vw, 180px);
+    font-size: clamp(30px, 21vw, 180px);
     margin-bottom: 8rem;
     text-wrap: nowrap;
     letter-spacing: -1vw;
@@ -108,6 +108,7 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 #socials img {
